--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "next": "12.2.0",
+    "next-auth": "^4.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
